kubernetes/apps/default/portainer-agent/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer-agent
  namespace: portainer
spec:
  selector:
    matchLabels:
      app: portainer-agent
  template:
    metadata:
      labels:
        app: portainer-agent
    spec:
      serviceAccountName: portainer-sa-clusteradmin
      containers:
        - name: portainer-agent
          # renovate: datasource=docker depName=portainer/agent
          image: portainer/agent:2.45.0
          ports:
            - containerPort: 9001
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: portainer-agent
  namespace: portainer
spec:
  type: LoadBalancer
  loadBalancerIP: ${LB_IP_PORTAINER}
  selector:
    app: portainer-agent
  ports:
    - name: agent
      port: 9001
      targetPort: 9001
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: portainer-agent-headless
  namespace: portainer
spec:
  clusterIP: None
  selector:
    app: portainer-agent
